k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
  namespace: linkedin-prod
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: user-service
  - to:
    - podSelector:
        matchLabels:
          app: post-service
  - to:
    - podSelector:
        matchLabels:
          app: connections-service
  - to:
    - podSelector:
        matchLabels:
          app: notification-service
  - to:
    - podSelector:
        matchLabels:
          app: uploader-service
  - to:
    - podSelector:
        matchLabels:
          app: discovery-server
